Fixes to json and cshtml

--- a/AutoRest/Generators/CSharp/CSharp/Templates/ServiceClientInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ServiceClientInterfaceTemplate.cshtml
@@ -25,7 +25,14 @@ namespace @Settings.Namespace
         /// <summary>
         /// The base URI of the service.
         /// </summary>
-        Uri BaseUri { get; set; }
+        @if (Model.IsCustomBaseUri)
+        {
+        @:internal string BaseUri {get; set;}
+        }
+        else
+        {
+        @:public Uri BaseUri { get; set; }
+        }
         @EmptyLine
 
         /// <summary>
