Change the generated file name: api_client to (service_name)_client, and enums to (service_name)_enums.

--- a/AutoRest/Generators/Python/Python/Templates/ModelInitTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ModelInitTemplate.cshtml
@@ -16,7 +16,7 @@
   }
   if (Model.ServiceClient.EnumTypes.Any())
   {
-@:from .enums import (
+@:from .@(Model.ServiceClient.Name.ToPythonCase())_enums import (
     foreach (var enumType in @Model.ServiceClient.EnumTypes)
     {
     @:@(enumType.Name),
