Change the file name of service client class.

--- a/AutoRest/Generators/Python/Python/Templates/ServiceClientInitTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ServiceClientInitTemplate.cshtml
@@ -19,7 +19,7 @@ from msrest.exceptions import (
     HttpOperationError,
 )
 @EmptyLine
-from .@(Model.Name.ToPythonCase())_client import @(Model.Name), @(Model.Name)Configuration
+from .@(Model.Name.ToPythonCase()) import @(Model.Name), @(Model.Name)Configuration
 @EmptyLine
 __all__ = [
     'ClientException',
