Fixes for cshtml
extra parens and removal of a private property from interface.

--- a/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
@@ -91,7 +91,7 @@ else
 if (Model.IsCustomBaseUri)
 {
     @:var _baseUrl = @(Model.ClientReference).BaseUri;
-    @:var _url = _baseUrl + (_baseUrl.EndsWith("/") ? "" : "/") + "@(Model.Url.TrimStart('/'))").ToString();
+    @:var _url = _baseUrl + _baseUrl.EndsWith("/") ? "" : "/" + "@(Model.Url.TrimStart('/'))";
 }
 else
 {
