--- a/AutoRest/Generators/NodeJS/Azure.NodeJS/Templates/AzureServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/Azure.NodeJS/Templates/AzureServiceClientTemplate.cshtml
@@ -40,8 +40,8 @@ var ServiceClient = msRestAzure.AzureServiceClient;
 @:var operations = require('./operations');
 }
 @EmptyLine
-@{var requiredParameters = Model.Properties.Where(p => p.IsRequired);}
-@{var optionalParameters = Model.Properties.Where(p => !p.IsRequired);}
+@{var requiredParameters = Model.Properties.Where(p => p.IsRequired && !p.IsConstant);}
+@{var optionalParameters = Model.Properties.Where(p => !p.IsRequired && !p.IsConstant);}
 /**
  * @@class
  * Initializes a new instance of the @Model.Name class.
