--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/ServiceClientTemplate.cshtml
@@ -37,8 +37,8 @@ var ServiceClient = msRest.ServiceClient;
 @:var operations = require('./operations');
 }
 @EmptyLine
-@{var requiredParameters = Model.Properties.Where(p => p.IsRequired);}
-@{var optionalParameters = Model.Properties.Where(p => !p.IsRequired);}
+@{var requiredParameters = Model.Properties.Where(p => p.IsRequired && !p.IsConstant);}
+@{var optionalParameters = Model.Properties.Where(p => !p.IsRequired && !p.IsConstant);}
 /**
  * @@class
  * Initializes a new instance of the @Model.Name class.
