--- a/AutoRest/Generators/NodeJS/Azure.NodeJS/Templates/AzureMethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/Azure.NodeJS/Templates/AzureMethodGroupTemplate.cshtml
@@ -14,6 +14,10 @@ var util = require('util');
 var msRest = require('ms-rest');
 var msRestAzure = require('ms-rest-azure');
 var WebResource = msRest.WebResource;
+@if (Model.ContainsTimeSpan)
+{
+@:var moment = require('moment');
+}
 @EmptyLine
 /**
  * @@class
