--- a/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
@@ -92,7 +92,7 @@ else
 if (Model.IsCustomBaseUri)
 {
     @:var _baseUrl = @(Model.ClientReference).BaseUri;
-    @:var _url = _baseUrl + ()_baseUrl.EndsWith("/") ? "" : "/") + "@(Model.Url.TrimStart('/'))";
+    @:var _url = _baseUrl + (_baseUrl.EndsWith("/") ? "" : "/") + "@(Model.Url.TrimStart('/'))";
 }
 else
 {
