--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzureServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzureServiceClientTemplate.cshtml
@@ -93,7 +93,7 @@ class @(Model.Name)(object):
 @EmptyLine
     def __init__(self, config):
 @EmptyLine
-        self._client = ServiceClient(@(Model.Properties.Any(p => p.Type == PrimaryType.Credentials) ? "config.credentials" : "None"), config)
+        self._client = ServiceClient(@(Model.Properties.Any(p => p.Type is PrimaryType.Credentials) ? "config.credentials" : "None"), config)
 @EmptyLine
 @if (Model.ModelTemplateModels.Any())
 {
