--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodTemplate.cshtml
@@ -130,7 +130,7 @@
 
   @if (Model.RequestBody != null)
   {
-      if (Model.RequestBody.Type == PrimaryType.Stream)
+      if (Model.RequestBody.Type is PrimaryType.Stream)
       {
   <text>
   // Serialize Request  
@@ -168,7 +168,7 @@
       @foreach (var parameter in Model.LogicalParameters.Where(p => p.Location == ParameterLocation.FormData))
       {
   @:if (@(parameter.Name) !== undefined && @(parameter.Name) !== null) {
-          if (parameter.Type == PrimaryType.Stream)
+          if (parameter.Type is PrimaryType.Stream)
           {  
     @:formData['@(parameter.SerializedName)'] = @(parameter.Name);  
           }
@@ -188,7 +188,7 @@
   </text>
   }
 
-  @if (Model.Responses.Any(r => r.Value.Body == PrimaryType.Stream))
+  @if (Model.Responses.Any(r => r.Value.Body is PrimaryType.Stream))
   {
 @:  @Include(new MethodStreamPipelineTemplate(), Model)
   }
