--- a/AutoRest/Generators/NodeJS/Azure.NodeJS/Templates/AzureServiceClientTemplateTS.cshtml
+++ b/AutoRest/Generators/NodeJS/Azure.NodeJS/Templates/AzureServiceClientTemplateTS.cshtml
@@ -30,8 +30,13 @@ declare class @(Model.Name) {
     @: * @@param {@param.Type.Name.ToCamelCase()} @param.Name - @param.Documentation
     @: *
     }
-     * @@param {string} [baseUri] - The base URI of the service.
-     *
+
+@if(!Model.IsCustomBaseUri)
+{
+     @:* @@param {string} [baseUri] - The base URI of the service.
+     @:*
+}
+
      * @@param {object} [options] - The parameter options
      *
      * @@param {Array} [options.filters] - Filters to be added to the request pipeline
