--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/ServiceClientTemplate.cshtml
@@ -49,8 +49,13 @@ var ServiceClient = msRest.ServiceClient;
 @: * @@param {@param.Type.Name.ToCamelCase()} @param.Name - @param.Documentation
 @: *
 }
- * @@param {string} [baseUri] - The base URI of the service.
- *
+
+@if(!Model.IsCustomBaseUri)
+{ 
+@: * @@param {string} [baseUri] - The base URI of the service.
+@: *
+}
+
  * @@param {object} [options] - The parameter options
  *
  * @@param {Array} [options.filters] - Filters to be added to the request pipeline
@@ -67,12 +72,13 @@ var ServiceClient = msRest.ServiceClient;
 }
  */
 function @(Model.Name)(@(Model.RequiredConstructorParameters), options) {
+@foreach (var property in Model.Properties.Where(p => p.DefaultValue != null))
+{
+  @:this.@(property.Name) = @(property.DefaultValue);
+}
+
 @foreach (var param in requiredParameters)
 {
-foreach (var property in Model.Properties.Where(p => p.DefaultValue != null))
-{
-    @:this.@(property.Name) = @(property.DefaultValue);
-}
 @:  if (@(param.Name) === null || @(param.Name) === undefined) {
 @:    throw new Error('\'@(param.Name)\' cannot be null.');
 @:  }
@@ -81,10 +87,16 @@ foreach (var property in Model.Properties.Where(p => p.DefaultValue != null))
   if (!options) options = {};
   @EmptyLine
   @(Model.Name)['super_'].call(this, @(requiredParameters.Any(p => p.Type.IsPrimaryType(KnownPrimaryType.Credentials)) ? "credentials" : "null"), options);
-  this.baseUri = baseUri;
+  
+@if(!Model.IsCustomBaseUri)
+{
+  @:this.baseUri = baseUri;
+}
+
   if (!this.baseUri) {
     this.baseUri = '@Model.BaseUrl';
   }
+
 @foreach (var param in requiredParameters)
 {
 @:  this.@(param.Name) = @(param.Name);
@@ -96,7 +108,7 @@ foreach (var property in Model.Properties.Where(p => p.DefaultValue != null))
   @:  this.@(property.Name) = options.@(property.Name);
   @:}
   }
-  
+
   @foreach (var methodGroup in Model.MethodGroupModels)
   {
   @:this.@(methodGroup.MethodGroupName) = new operations.@(methodGroup.MethodGroupType)(this);
