--- a/AutoRest/Generators/Java/Java/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ServiceClientTemplate.cshtml
@@ -104,16 +104,17 @@ if(!property.IsReadOnly)
      * Initializes an instance of @(Model.Name) client.
      *
      * @@param baseUri the base URI of the host
-     * @@param client the {@@link OkHttpClient} client to use for REST calls
+     * @@param clientBuilder the builder for building up an {@@link OkHttpClient}
      * @@param retrofitBuilder the builder for building up a {@@link Retrofit}
      */
-    public @(Model.Name)Impl(String baseUri, OkHttpClient client, Retrofit.Builder retrofitBuilder) {
-        super(client, retrofitBuilder);
+    public @(Model.Name)Impl(String baseUri, OkHttpClient.Builder clientBuilder, Retrofit.Builder retrofitBuilder) {
+        super(clientBuilder, retrofitBuilder);
         this.baseUri = baseUri;
         initialize();
     }
 @EmptyLine
-    private void initialize() {
+    @@Override
+    protected void initialize() {
     @if (Settings.AddCredentials)
     {
 @:        if (this.credentials != null)
@@ -121,7 +122,7 @@ if(!property.IsReadOnly)
 @:            this.credentials.applyCredentialsFilter(this.client);
 @:        }
     }
-    
+        super.initialize();
         this.retrofitBuilder.baseUrl(baseUri);
 @if (Model.MethodTemplateModels.Any())
 {
@@ -133,10 +134,10 @@ if(!property.IsReadOnly)
 @EmptyLine
 <text>
 @foreach (var method in Model.MethodTemplateModels)
-    {
+{
     @:@(Include(new MethodTemplate(), method))
     @EmptyLine
-    }
+}
 </text>
 }
 }
