--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzurePagingMethodTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzurePagingMethodTemplate.cshtml
@@ -26,7 +26,8 @@
 }
         @ParameterWrapComment(string.Empty, ":param dict custom_headers: headers that will be added to the request")
         @ParameterWrapComment(string.Empty, ":param boolean raw: returns the direct response alongside the deserialized response")
-        @ParameterWrapComment(string.Empty, string.Format(":rtype: {0} or msrest.pipeline.ClientRawResponse", MethodTemplateModel.GetDocumentationType(Model.ReturnType.Body)))
+        @ParameterWrapComment(string.Empty, string.Format(":rtype: {0}", MethodTemplateModel.GetDocumentationType(Model.ReturnType.Body)))
+        @ParameterWrapComment(string.Empty, ":rtype: msrest.pipeline.ClientRawResponse if raw=True")
         """
         @Model.BuildInputMappings()
 @if (Model.InputParameterTransformation.Any())
