Add missing comments to C# code

--- a/AutoRest/Generators/CSharp/CSharp/Templates/ExtensionsTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ExtensionsTemplate.cshtml
@@ -17,6 +17,9 @@ namespace @Settings.Namespace
 @:    using @usingString;
 }
 @EmptyLine
+    /// <summary>
+    /// Extension methods for @(Model.ExtensionName).
+    /// </summary>
     public static partial class @(Model.ExtensionName)Extensions
     {
         @foreach (var method in Model.MethodTemplateModels)
