--- a/AutoRest/Generators/CSharp/CSharp/Templates/ServiceClientInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ServiceClientInterfaceTemplate.cshtml
@@ -52,6 +52,9 @@ namespace @Settings.Namespace
         @EmptyLine
     @foreach(var operation in Model.Operations)
     {
+        @:/// <summary>
+        @:/// Gets the I@(operation.MethodGroupType).
+        @:/// </summary>
         @:I@(operation.MethodGroupType) @(operation.MethodGroupName) { get; }
         @EmptyLine
         @:
