--- a/AutoRest/Generators/CSharp/CSharp/Templates/ServiceClientBodyTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ServiceClientBodyTemplate.cshtml
@@ -196,6 +196,8 @@ foreach (var param in parameters)
 @:}
 @:@EmptyLine
 
+if(!Model.IsCustomBaseUri)
+{ 
 @:/// <summary>
 @:/// Initializes a new instance of the @Model.Name class.
 @:/// </summary>
@@ -211,15 +213,12 @@ foreach (var param in parameters)
 @:/// <param name='handlers'>
 @:/// Optional. The delegating handlers to add to the http client pipeline.
 @:/// </param>
-@:@(Model.ConstructorVisibility) @(Model.Name)(@(Model.IsCustomBaseUri ? "" : "Uri baseUri,") @(Model.RequiredConstructorParameters), params DelegatingHandler[] handlers) : this(handlers)
+@:@(Model.ConstructorVisibility) @(Model.Name)(Uri baseUri, @(Model.RequiredConstructorParameters), params DelegatingHandler[] handlers) : this(handlers)
 @:{
-if (!Model.IsCustomBaseUri)
-{
 @:    if (baseUri == null)
 @:    {
 @:        throw new ArgumentNullException("baseUri");
 @:    }
-}
     foreach (var param in parameters)
     {
 @:    if (@(param.Name.ToCamelCase()) == null)
@@ -227,10 +226,9 @@ if (!Model.IsCustomBaseUri)
 @:        throw new ArgumentNullException("@(param.Name.ToCamelCase())");
 @:    }
 }
-if (!Model.IsCustomBaseUri)
-{
+
 @:    this.BaseUri = baseUri;
-}
+
 foreach (var param in parameters)
 {
 @:    this.@(param.Name) = @(param.Name.ToCamelCase());
@@ -264,15 +262,12 @@ foreach (var param in parameters)
 @:/// <param name='handlers'>
 @:/// Optional. The delegating handlers to add to the http client pipeline.
 @:/// </param>
-@:@(Model.ConstructorVisibility) @(Model.Name)(@(Model.IsCustomBaseUri ? "" : "Uri baseUri,") @(Model.RequiredConstructorParameters), HttpClientHandler rootHandler, params DelegatingHandler[] handlers) : this(rootHandler, handlers)
+@:@(Model.ConstructorVisibility) @(Model.Name)(Uri baseUri, @(Model.RequiredConstructorParameters), HttpClientHandler rootHandler, params DelegatingHandler[] handlers) : this(rootHandler, handlers)
 @:{
-if (!Model.IsCustomBaseUri)
-{
 @:    if (baseUri == null)
 @:    {
 @:        throw new ArgumentNullException("baseUri");
 @:    }
-}
 
 foreach (var param in parameters)
 {
@@ -281,10 +276,9 @@ foreach (var param in parameters)
 @:        throw new ArgumentNullException("@(param.Name.ToCamelCase())");
 @:    }
 }
-if (!Model.IsCustomBaseUri)
-{
+
 @:    this.BaseUri = baseUri;
-}
+
 foreach (var param in parameters)
 {
 @:    this.@(param.Name) = @(param.Name.ToCamelCase());
@@ -299,4 +293,5 @@ foreach (var param in parameters)
 }
 @:}
 @:@EmptyLine
+}
 }
