--- a/AutoRest/Generators/NodeJS/Azure.NodeJS/Templates/AzureServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/Azure.NodeJS/Templates/AzureServiceClientTemplate.cshtml
@@ -88,7 +88,11 @@ function @(Model.Name)(@(Model.RequiredConstructorParameters), options) {
   if (!options) options = {};
   @EmptyLine
   @(Model.Name)['super_'].call(this, @(requiredParameters.Any(p => p.Type.IsPrimaryType(KnownPrimaryType.Credentials)) ? "credentials" : "null"), options);
-  this.baseUri = baseUri;
+@if(!Model.IsCustomBaseUri)
+{
+  @:this.baseUri = baseUri;
+}
+
   if (!this.baseUri) {
     this.baseUri = '@Model.BaseUrl';
   }
