--- a/AutoRest/Generators/Python/Python/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ModelTemplate.cshtml
@@ -75,7 +75,7 @@ else
     {
       for (int i = 0; i < propertyList.Count; i++) 
       {
-        @:@(ModelTemplateModel.InitializeProperty(propertyList[i]))
+        @:@(Model.InitializeProperty(propertyList[i]))
       }
     }
     @:}
