Support parameterized hosts in Java

--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureServiceClientInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureServiceClientInterfaceTemplate.cshtml
@@ -23,10 +23,11 @@ package @(Settings.Namespace.ToLower());
  */
 public interface @Model.Name {
     /**
-     * Gets the URI used as the base for all cloud service requests.
-     * @@return The BaseUri value.
+     * Gets the URL used as the base for all cloud service requests.
+     *
+     * @@return the BaseUrl object.
      */
-    String getBaseUri();
+    AutoRestBaseUrl getBaseUrl();
 @EmptyLine
     /**
      * Gets the list of interceptors the OkHttp client will execute.
