--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureServiceClientTemplate.cshtml
@@ -28,17 +28,18 @@ public final class @(Model.Name)Impl extends AzureServiceClient implements @Mode
 @:    /** The Retrofit service to perform REST calls. */
 @:    private @Model.ServiceClientServiceType service;
 }
-    /** The URI used as the base for all cloud service requests. */
-    private final String baseUri;
+    /** The URL used as the base for all cloud service requests. */
+    private final AutoRestBaseUrl baseUrl;
     /** the {@@link AzureClient} used for long running operations. */
     private AzureClient azureClient;
 @EmptyLine
     /**
-     * Gets the URI used as the base for all cloud service requests.
-     * @@return The BaseUri value.
+     * Gets the URL used as the base for all cloud service requests.
+     *
+     * @@return The BaseUrl value.
      */
-    public String getBaseUri() {
-        return this.baseUri;
+    public AutoRestBaseUrl getBaseUrl() {
+        return this.baseUrl;
     }
 @EmptyLine
     /**
@@ -98,10 +99,10 @@ if(!property.IsReadOnly)
     /**
      * Initializes an instance of @(Model.Name) client.
      *
-     * @@param baseUri the base URI of the host
+     * @@param baseUrl the base URL of the host
      */
-    @(Model.IsCustomBaseUri ? "private" : "public") @(Model.Name)Impl(String baseUri) {
-        this(baseUri, null);
+    @(Model.IsCustomBaseUri ? "private" : "public") @(Model.Name)Impl(String baseUrl) {
+        this(baseUrl, null);
     }
 @EmptyLine
 
@@ -120,12 +121,12 @@ if(!property.IsReadOnly)
     /**
      * Initializes an instance of @(Model.Name) client.
      *
-     * @@param baseUri the base URI of the host
+     * @@param baseUrl the base URL of the host
      * @@param credentials the management credentials for Azure
      */
-    @(Model.IsCustomBaseUri ? "private" : "public") @(Model.Name)Impl(String baseUri, ServiceClientCredentials credentials) {
+    @(Model.IsCustomBaseUri ? "private" : "public") @(Model.Name)Impl(String baseUrl, ServiceClientCredentials credentials) {
         super();
-        this.baseUri = baseUri;
+        this.baseUrl = new AutoRestBaseUrl(baseUrl);
         this.credentials = credentials;
         initialize();
     }
@@ -135,14 +136,14 @@ if(!property.IsReadOnly)
 @:    /**
 @:     * Initializes an instance of @(Model.Name) client.
 @:     *
-@:     * @@param baseUri the base URI of the host
+@:     * @@param baseUrl the base URL of the host
 @:     * @@param credentials the management credentials for Azure
 @:     * @@param clientBuilder the builder for building up an {@@link OkHttpClient}
 @:     * @@param retrofitBuilder the builder for building up a {@@link Retrofit}
 @:     */
-@:    public @(Model.Name)Impl(String baseUri, ServiceClientCredentials credentials, OkHttpClient.Builder clientBuilder, Retrofit.Builder retrofitBuilder) {
+@:    public @(Model.Name)Impl(String baseUrl, ServiceClientCredentials credentials, OkHttpClient.Builder clientBuilder, Retrofit.Builder retrofitBuilder) {
 @:        super(clientBuilder, retrofitBuilder);
-@:        this.baseUri = baseUri;
+@:        this.baseUrl = new AutoRestBaseUrl(baseUrl);
 @:        this.credentials = credentials;
 @:        initialize();
 @:    }
@@ -153,12 +154,12 @@ else
 @:     * Initializes an instance of @(Model.Name) client.
 @:     *
 @:     * @@param credentials the management credentials for Azure
-@:     * @@param client the {@@link OkHttpClient} client to use for REST calls
+@:     * @@param clientBuilder the builder for building up an {@@link OkHttpClient}
 @:     * @@param retrofitBuilder the builder for building up a {@@link Retrofit}
 @:     */
-@:    public @(Model.Name)Impl(ServiceClientCredentials credentials, OkHttpClient client, Retrofit.Builder retrofitBuilder) {
-@:        super(client, retrofitBuilder);
-@:        this.baseUri = "@Model.BaseUrl";
+@:    public @(Model.Name)Impl(ServiceClientCredentials credentials, OkHttpClient.Builder clientBuilder, Retrofit.Builder retrofitBuilder) {
+@:        super(clientBuilder, retrofitBuilder);
+@:        this.baseUrl = new AutoRestBaseUrl("@Model.BaseUrl");
 @:        this.credentials = credentials;
 @:        initialize();
 @:    }
@@ -175,13 +176,12 @@ else
 @:    /**
 @:     * Initializes an instance of @(Model.Name) client.
 @:     *
-@:     * @@param baseUri the base URI of the host
 @:     * @@param clientBuilder the builder for building up an {@@link OkHttpClient}
 @:     * @@param retrofitBuilder the builder for building up a {@@link Retrofit}
 @:     */
 @:    public @(Model.Name)Impl(OkHttpClient.Builder clientBuilder, Retrofit.Builder retrofitBuilder) {
 @:        super(clientBuilder, retrofitBuilder);
-@:        this.baseUri = "@Model.BaseUrl";
+@:        this.baseUrl = new AutoRestBaseUrl("@Model.BaseUrl");
 @:        initialize();
 @:    }
 }
@@ -190,13 +190,13 @@ else
 @:     /**
 @:     * Initializes an instance of @(Model.Name) client.
 @:     *
-@:     * @@param baseUri the base URI of the host
+@:     * @@param baseUrl the base URL of the host
 @:     * @@param clientBuilder the builder for building up an {@@link OkHttpClient}
 @:     * @@param retrofitBuilder the builder for building up a {@@link Retrofit}
 @:     */
-@:    public @(Model.Name)Impl(String baseUri, OkHttpClient.Builder clientBuilder, Retrofit.Builder retrofitBuilder) {
+@:    public @(Model.Name)Impl(String baseUrl, OkHttpClient.Builder clientBuilder, Retrofit.Builder retrofitBuilder) {
 @:        super(clientBuilder, retrofitBuilder);
-@:        this.baseUri = baseUri;
+@:        this.baseUrl = new AutoRestBaseUrl(baseUrl);
 @:        initialize();
 @:    }
 }
@@ -220,7 +220,7 @@ else
         this.azureClient = new AzureClient(clientBuilder, retrofitBuilder);
         this.azureClient.setCredentials(this.credentials);
 
-        this.retrofitBuilder.baseUrl(baseUri);
+        this.retrofitBuilder.baseUrl(baseUrl);
 @if (Model.MethodTemplateModels.Any())
 {
 @:        initializeService();
