--- a/AutoRest/Generators/Java/Java/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ServiceClientTemplate.cshtml
@@ -31,16 +31,17 @@ public final class @(Model.Name)Impl extends ServiceClient implements @Model.Nam
 @:    private @Model.ServiceClientServiceType service;
 }
     /**
-     * The URI used as the base for all cloud service requests.
+     * The URL used as the base for all cloud service requests.
      */
-    private final String baseUri;
+    private final AutoRestBaseUrl baseUrl;
 @EmptyLine
     /**
-     * Gets the URI used as the base for all cloud service requests.
-     * @@return The BaseUri value.
+     * Gets the URL used as the base for all cloud service requests.
+     *
+     * @@return The BaseUrl value.
      */
-    public String getBaseUri() {
-        return this.baseUri;
+    public AutoRestBaseUrl getBaseUrl() {
+        return this.baseUrl;
     }
 @foreach (var property in Model.Properties)
 {
@@ -92,11 +93,11 @@ if(!property.IsReadOnly)
     /**
      * Initializes an instance of @(Model.Name) client.
      *
-     * @@param baseUri the base URI of the host
+     * @@param baseUrl the base URL of the host
      */
-    @(Model.IsCustomBaseUri ? "private" : "public") @(Model.Name)Impl(String baseUri) {
+    @(Model.IsCustomBaseUri ? "private" : "public") @(Model.Name)Impl(String baseUrl) {
         super();
-        this.baseUri = baseUri;
+        this.baseUrl = new AutoRestBaseUrl(baseUrl);
         initialize();
     }
 
@@ -104,20 +105,20 @@ if(!property.IsReadOnly)
     /**
      * Initializes an instance of @(Model.Name) client.
      *
-     @(Model.IsCustomBaseUri ? "" : "* @param baseUri the base URI of the host")
+     @(Model.IsCustomBaseUri ? "" : "* @param baseUrl the base URL of the host")
      * @@param clientBuilder the builder for building up an {@@link OkHttpClient}
      * @@param retrofitBuilder the builder for building up a {@@link Retrofit}
      */
-    public @(Model.Name)Impl(@(Model.IsCustomBaseUri ? "" : "String baseUri, ")OkHttpClient.Builder clientBuilder, Retrofit.Builder retrofitBuilder) {
+    public @(Model.Name)Impl(@(Model.IsCustomBaseUri ? "" : "String baseUrl, ")OkHttpClient.Builder clientBuilder, Retrofit.Builder retrofitBuilder) {
         super(clientBuilder, retrofitBuilder);
 
 @if (Model.IsCustomBaseUri)
 {
-        @:this.baseUri = "@(Model.BaseUrl)";
+        @:this.baseUrl = new AutoRestBaseUrl("@(Model.BaseUrl)");
 }
 else
 {
-        @:this.baseUri = baseUri;
+        @:this.baseUrl = new AutoRestBaseUrl(baseUrl);
 }
 
         initialize();
@@ -134,7 +135,7 @@ else
 @:        }
     }
         super.initialize();
-        this.retrofitBuilder.baseUrl(baseUri);
+        this.retrofitBuilder.baseUrl(baseUrl);
 @if (Model.MethodTemplateModels.Any())
 {
 @:        initializeService();
